--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pokemon</title>
-  <meta name="description" content="Tells you what Pokemon you are in the first gen. Possible to display an incredible Pokemon song!">
+  
+  <meta name="description" content="Tells you what Pokemon from the first generation you are and hear an incredible Pokemon song!">
+  <meta name="keywords" content="Memory">
+  <meta name="author" content="Rémy Beumier">
+
+  <meta property="og:title" content="Memory">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="https://beumsk.github.io/Memory">
+  <meta property="og:image" content="https://beumsk.github.io/Memory/cover.jpg">
+  <meta property="og:image:secure_url" content="https://beumsk.github.io/Memory/cover.jpg">
+  <meta property="og:description" content="Tells you what Pokemon from the first generation you are and hear an incredible Pokemon song!">
+  
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="css/style.css">
+  
+  <title>What kind of Pokemon are you?</title>
 </head>
 
 <body>
 
   
 <header>
-  <h1>WHAT KIND OF POKEMON ARE YOU ?</h1>
+  <h1>WHAT KIND OF POKEMON ARE YOU?</h1>
 </header>
   
 <section>
