--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <meta name="description" content="Tells you what Pokemon from the first generation you are and hear an incredible Pokemon song!">
-  <meta name="keywords" content="Memory">
+  <meta name="keywords" content="Pokemon">
   <meta name="author" content="Rémy Beumier">
 
-  <meta property="og:title" content="Memory">
+  <meta property="og:title" content="Pokemon">
   <meta property="og:type" content="">
-  <meta property="og:url" content="https://beumsk.github.io/Memory">
-  <meta property="og:image" content="https://beumsk.github.io/Memory/cover.jpg">
-  <meta property="og:image:secure_url" content="https://beumsk.github.io/Memory/cover.jpg">
+  <meta property="og:url" content="https://beumsk.github.io/Pokemon">
+  <meta property="og:image" content="https://beumsk.github.io/Pokemon/cover.jpg">
+  <meta property="og:image:secure_url" content="https://beumsk.github.io/Pokemon/cover.jpg">
   <meta property="og:description" content="Tells you what Pokemon from the first generation you are and hear an incredible Pokemon song!">
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
